<resources>
    <string name="app_name">Whatsapp</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up_using_phone">Sign Up using phone</string>
    <string name="facebook">Facebook</string>
    <string name="settings">Settings</string>
    <string name="group_chat">Group chat</string>

</resources>