<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E3E3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_gravity="center_horizontal|center_vertical|fill_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/whatsapp" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="#FAF8F8"
            android:ems="10"
            android:hint="@string/username"
            android:padding="9dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="#FAF8F8"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="#FAF8F8"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:text="Already have account?"
            android:textAlignment="gravity"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:minHeight="50dp"
            android:text="@string/sign_up"
            app:cornerRadius="4dp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btngoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#F6F1F1"
            android:drawableLeft="@drawable/ic_icons8_google"
            android:paddingLeft="16dp"
            android:text="Google"
            android:textColor="#100F0F"
            android:textColorHint="#1B1818"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="14dp"
            app:iconTint="#1C1818" />

        <Button
            android:id="@+id/btnfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/ic_icons8_facebook__1_"
            android:paddingLeft="16dp"
            android:text="@string/facebook"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="14dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/sign_up_using_phone"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>